--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
     "license": "MIT",
     "authors": [
         {
+            "name": "Codeloops",
+            "email": "development@codeloops.it",
+            "homepage": "https://codeloops.it",
+            "role": "Developer"
+        },
+        {
             "name": "Mostafa Maklad",
             "email": "dev.mostafa.maklad@gmail.com",
             "homepage": "https://github.com/mostafamaklad",
@@ -34,7 +40,7 @@
         "illuminate/auth": "^10.0",
         "illuminate/container": "^10.0",
         "illuminate/contracts": "^10.0",
-        "jenssegers/mongodb": "^3.9"
+        "mongodb/laravel-mongodb": "^3.9"
     },
     "require-dev": {
         "monolog/monolog": "^3.2",
