--- a/composer.json
+++ b/composer.json
@@ -40,13 +40,13 @@
         "illuminate/auth": "^10.0",
         "illuminate/container": "^10.0",
         "illuminate/contracts": "^10.0",
-        "mongodb/laravel-mongodb": "^3.9"
     },
     "require-dev": {
         "monolog/monolog": "^3.2",
         "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5.10",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "mongodb/laravel-mongodb": "^3.9"
     },
     "autoload": {
         "psr-4": {
