--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "php": "^8.1",
         "illuminate/auth": "^10.0",
         "illuminate/container": "^10.0",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "^10.0"
     },
     "require-dev": {
         "monolog/monolog": "^3.2",
