--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5.10",
         "squizlabs/php_codesniffer": "^3.7",
-        "mongodb/laravel-mongodb": "^4.0.0-rc1"
+        "mongodb/laravel-mongodb": "^3.9"
     },
     "autoload": {
         "psr-4": {
